--- a/index.html
+++ b/index.html
@@ -1,3 +1,11 @@
+
+<!DOCTYPE html>
+<html> 
+  <head> 
+ <title> ELEVATOR </title>
+  </head> 
+
+  <body> 
 <div style="width:710px;margin:0px auto;">
 	<div style="width:710px;float:left;">
 		<div style="width:710px;height:480px;float:left;">
@@ -30,17 +38,19 @@
 						<p style="font-family:arial;font-size:7px;color:#fff;text-align:center;margin:0px;padding:12px 0px;line-height:100%;text-transform:uppercase;letter-spacing:1px;border-bottom:2px solid #fff;">
 							<a href="http://www.asianfanfics.com/story/view/1158587/special-moment-with-youngjae-bap-youngjae-yooyoungjae-yooyoungjaexoc-yooyoungjaebap-yooyoungjaexyou" rel="nofollow" style="color:#fff;font-weight:normal;">Special Moment with Youngjae</a> &nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp; <a href="http://www.asianfanfics.com/story/view/1159250/special-moment-with-himchan-you-himchan-bap" rel="nofollow" style="color:#fff;font-weight:normal;">Special Moment with Himchan</a> &nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp; <a href="http://www.asianfanfics.com/story/view/1161099/the-adventures-of-daehyun-s-cheesecake-bap" rel="nofollow" style="color:#fff;font-weight:normal;">The Adventures of Daehyun's Cheesecake</a> &nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp; <a href="http://www.asianfanfics.com/story/view/1187255/stuck-with-detective-kim-mystery-kimhimchan-himchan-bap-noir" rel="nofollow" style="color:#fff;font-weight:normal;">Stuck with Detective Kim</a> &nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp; <a href="http://www.asianfanfics.com/story/view/1262404/summer-in-shed-6-originalcharacter-bap-jungdaehyun-daehyun-occ" rel="nofollow" style="color:#fff;font-weight:normal;">Summer in Shed 6</a> &nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp; <a href="http://www.asianfanfics.com/story/view/1259256/close-crime-drama-mystery-thriller-bap-youngjae-yooyoungjae" rel="nofollow" style="color:#fff;font-weight:normal;">CLOSE</a> &nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;  <a href="http://www.asianfanfics.com/story/view/1162168/change-romance-sliceoflife-you-yongguk-originalcharacter-bap" rel="nofollow" style="color:#fff;font-weight:normal;">Change</a> &nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp; <a href="https://github.com/JayKayOT6" rel="nofollow" style="color:#fff;font-weight:normal;" title="GitHub Hosted by JayKayOT6">Credit</a></p>
 							<p style="font-family:arial;font-size:11px;color:#fff;text-align:justify;margin:0px;line-height:100%;">
-						<span style="text-transform:uppercase;font-size:11px;letter-spacing:-1px;font-weight:900;">CHAPTER 4</span><br />
-							No a single speck of blood on your hands, and a sign of strain on the breathing bastard&rsquo;s face a the flames engulf his body. Revenge was numbing. May this night be void form existence the same way that bastard&rsquo;s ashes will be. The pastors in the country side are pretty nice, a couple of tears and here we are watching him die on this still night.<br/>
-							&quot;Where there&rsquo;s an end, there&rsquo;s always a beginning.&quot; Devon spoke quietly.<br/>
-							&quot;I agree, but the beginning I want will take some time,&quot; you smiled sadly. Gone was the civil woman who crushed on this man, there&rsquo;s no way he&rsquo;d accept her now. Who would employ her? There was bound to be a search on the pair soon.<br/>
-							&quot;And so will mine&quot; He sighed. &quot;But I&rsquo;m ready when you are&quot;. He looked at you with a smile as the sun&rsquo;s light began to flood the sky. Feet guiding you towards his car, you rethought over his words. <br/>
-							&quot;What beginning are you looking for Devon?&quot; you asked as he smoothly manouvered over the dusty countryside roads.<br/>
-							&quot;A beginning with you&quot; the lad smiled a lopsided kittenish smile, brown eyes glimmering with sincerity masking embarrassment. A blush flooded your cheeks, gathering courage, you slid your fingers to lace into his hand resting on the gear shift.<br/>
-							&quot;I wouldn&rsquo;t want a beginning any better.&quot;
-							<br/><br/><br/>
-							<span style="text-transform:uppercase;font-size:18px;letter-spacing:-1px;font-weight:900;">FIN/</span>
-								</p>
+						<span style="text-transform:uppercase;font-size:11px;letter-spacing:-1px;font-weight:900;">CHAPTER 1</span><br>
+						Pulling the torn fabric of your pathetic work blazer closer to your shivering frame, the uneven tapping of broken heeled shoes to concrete filled the void of the night. May this still night wipe your mind of your misfortunes, may the night&rsquo;s slience last long enough to wipe the worries of paying the bills with no paycheck. Or decency.<br>
+						The sound of heels change on the tiles of the shady apartment building you called home. The elevator door closing infront of you halts when a hand grips the door. The last person you want to see you in this state peers up, leaning off the elevator door.<br>
+						Those damned heels, your torn skirt, that disheveled hair on your head, and those ugly puffy eyes from crying. This broken image wasn&rsquo;t what you wanted the man on the elevator to see. The man in a snapback whose quick glance smile on moving day had you smitten day, the guy who&rsquo;d bought extra milk just to leave a bottle at your door with a note. The decent neighbor who made life in this part of town alittle bearable.<br>
+						The neighbor you could never talk to, in all his perfection you felt intimidated by sheer perfection. And here you drowned in plain embarrassment.<br>
+						Any girl in this situation with blue marks on her body, wouldn&rsquo;t want to see her crush. Involuntary tears rolled down your cheek but your mind was too done with the day to figure out why were they there?<br>
+						A handkerchief pulled up in front of you, taken aback you looked up to meet the neighbors gaze.<br>
+						That emptiness, that unmistakable void from inside you tessellated in his eyes. <br>
+						The silence of the elevator disrupted with a bell and you stepped into the hallway.<br>
+						&quot;Thank you..&quot;<br>
+						&quot;I&rsquo;m Devon&quot; The man replied. &quot;And don&rsquo;t thank me, we could both use a drink.&quot; <br>
+						&quot;It&rsquo;s fine&quot; you spoke a little too fast. &quot;It&rsquo;s late, you should rest.&quot; <br>
+						&quot;I was talking about a cup of Nesquik&quot; he smiled, oh how it hurt to see that smile with empty eyes. &quot;I insist, Come in.&quot; </p>
 						<br/><br/><br/><br/><br/><br/><br/><br/>
 					</div>
 				</div>
@@ -63,13 +73,13 @@
 							Image credits: <br />
 							@dh_jung_bap</p>
 					</div>
-					<div style="background:#fff;width:122px;float:left;padding:27px;">
+						<div style="background:#fff;width:122px;float:left;padding:27px;">
 						<p style="font-family:arial;font-size:11px;color:#bbb;text-align:left;margin:0px;line-height:100%;padding:3px 0px 3px 7px;border-left:2px solid #6b92a2;">
 							<span style="text-transform:uppercase;font-weight:900;color:#6b92a2;font-size:9px;">Story Name:</span> Elevator<br />
 							<span style="text-transform:uppercase;font-weight:900;color:#6b92a2;font-size:9px;">Author:</span> JayKayOT6<br />
 							<span style="text-transform:uppercase;font-weight:900;color:#6b92a2;font-size:9px;">Characters:</span> OC, Devon<br />
 							<span style="text-transform:uppercase;font-weight:900;color:#6b92a2;font-size:9px;">Word Count:</span> 1,316<br />
-							<span style="text-transform:uppercase;font-weight:900;color:#6b92a2;font-size:9px;">Notes:</span> This is not a true depiction of my works. I hate it cringey but Asma thinks otherwise</p>
+							<span style="text-transform:uppercase;font-weight:900;color:#6b92a2;font-size:9px;">Notes:</span> This is not a true depiction of my works. I hate it cringey but Asma likes it otherwise</p>
 					</div>
 				</div>
 				<div style="width:251px;float:left;border:2px solid #fff;padding:25px;margin:50px 0px 100px;">
@@ -85,11 +95,12 @@
 					<div style="width:200px;float:left;border:2px solid #fff;padding:25px;margin:15px 0px 0px;">	
 						<p style="font-family:arial;font-size:11px;color:#fff;text-align:justify;margin:0px;line-height:100%;">
 						<span style="text-transform:uppercase;font-size:11px;letter-spacing:-1px;font-weight:900;">
-						<a href="Elevator3.html" rel="nofollow" style="color:#fff;font-weight:normal;">Chapter3</a> &nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp; <a href="Elevator2.html" rel="nofollow" style="color:#fff;font-weight:normal;">Chapter2</a> &nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;<a href="index.html" rel="nofollow" style="color:#fff;font-weight:normal;">Chapter1</a>
-						</p>
-						</div>
+						<a href="Elevator4.html" rel="nofollow" style="color:#fff;font-weight:normal;">Chapter4</a> &nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp; <a href="Elevator3.html" rel="nofollow" style="color:#fff;font-weight:normal;">Chapter3</a> &nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;<a href="Elevator2.html" rel="nofollow" style="color:#fff;font-weight:normal;">Chapter2</a></p>
+					</div>
 				</div>		
 			</div>
 		</div>
 	</div>
 </div>
+  </body> 
+</html>
