--- a/Elevator2.html
+++ b/Elevator2.html
@@ -85,7 +85,7 @@
 					<div style="width:200px;float:left;border:2px solid #fff;padding:25px;margin:15px 0px 0px;">	
 						<p style="font-family:arial;font-size:11px;color:#fff;text-align:justify;margin:0px;line-height:100%;">
 						<span style="text-transform:uppercase;font-size:11px;letter-spacing:-1px;font-weight:900;">
-						<a href="Elevator4.html" rel="nofollow" style="color:#fff;font-weight:normal;">Chapter4</a> &nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp; <a href="Elevator3.html" rel="nofollow" style="color:#fff;font-weight:normal;">Chapter3</a> &nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;<a href="Elevator1.html" rel="nofollow" style="color:#fff;font-weight:normal;">Chapter1</a>
+						<a href="Elevator4.html" rel="nofollow" style="color:#fff;font-weight:normal;">Chapter4</a> &nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp; <a href="Elevator3.html" rel="nofollow" style="color:#fff;font-weight:normal;">Chapter3</a> &nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;<a href="index.html" rel="nofollow" style="color:#fff;font-weight:normal;">Chapter1</a>
 						</p>
 						</div>
 				</div>		
