--- a/Elevator3.html
+++ b/Elevator3.html
@@ -1,3 +1,11 @@
+
+<!DOCTYPE html>
+<html> 
+  <head> 
+ <title> ELEVATOR </title>
+  </head> 
+
+  <body> 
 <div style="width:710px;margin:0px auto;">
 	<div style="width:710px;float:left;">
 		<div style="width:710px;height:480px;float:left;">
@@ -93,3 +101,5 @@
 		</div>
 	</div>
 </div>
+  </body> 
+</html>
