--- a/Elevator2.html
+++ b/Elevator2.html
@@ -1,3 +1,9 @@
+<!DOCTYPE html>
+<html> 
+  <head> 
+ <title> ELEVATOR </title>
+  </head> 
+  <body>
 <div style="width:710px;margin:0px auto;">
 	<div style="width:710px;float:left;">
 		<div style="width:710px;height:480px;float:left;">
@@ -93,3 +99,5 @@
 		</div>
 	</div>
 </div>
+  </body> 
+</html>
